# logsar

./: CMakeLists.txt
include/: console_sink.h  file_sink.h  logger.h  sink.h
src/: logger.cc
src/utils/: sink.cc
tests/: test_logger.cc
